--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
             my name is Akash
             i am from Pakistan
         </pre>
+        <h1>I love Pakistan</h1>
+        <h2>Pakistan is a very beautiful country</h2>
     </body>
 </html>
