--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <h2>Pakistan is a very beautiful country</h2>
         <h2>Thats it</h2>
         <h1>Pakistan is a very beautiful country</h1>
+        <h1>Islamabad is the capital of Pakistan</h1>
+
     </body>
 </html>
