--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Thats it</h2>
         <h1>Pakistan is a very beautiful country</h1>
         <h1>Islamabad is the capital of Pakistan</h1>
+        <h2>Lahore is the heart of Pakistan</h2>
 
     </body>
 </html>
