--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <h1>Pakistan is a very beautiful country</h1>
         <h1>Islamabad is the capital of Pakistan</h1>
         <h2>Lahore is the heart of Pakistan</h2>
+        <h2>karachi is the main city of Pakistan and is the main pillar of Pakistan economy</h2>
+
 
     </body>
 </html>
