--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>Islamabad is the capital of Pakistan</h1>
         <h2>Lahore is the heart of Pakistan</h2>
         <h2>karachi is the main city of Pakistan and is the main pillar of Pakistan economy</h2>
+        <h2>quetta is also very beautiful city</h2>
 
 
     </body>
