--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Lahore is the heart of Pakistan</h2>
         <h2>karachi is the main city of Pakistan and is the main pillar of Pakistan economy</h2>
         <h2>quetta is also very beautiful city</h2>
-
+        <h1>Thats all from today</h1>
 
     </body>
 </html>
