--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+            <title>Home</title>
+            <style>
+                h1 {
+                    text-align: center;
+                    font-size: 72px;
+                    color: brown;
+                }
+                table {
+                    width: 100%;
+                    border-collapse: collapse;
+                }
+                td,th {
+                    border: solid 1px #dddddd;
+                    text-align: left;
+                    padding: 8px;
+                } 
+                tr:nth-child(even){
+                    background-color: #dddddd;
+                }
+            </style>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <pre>
-            hi there,
-            my name is Akash
-            i am from Pakistan
-        </pre>
-        <h1>I love Pakistan</h1>
-        <h2>Pakistan is a very beautiful country</h2>
-        <h2>Thats it</h2>
-        <h1>Pakistan is a very beautiful country</h1>
-        <h1>Islamabad is the capital of Pakistan</h1>
-        <h2>Lahore is the heart of Pakistan</h2>
-        <h2>karachi is the main city of Pakistan and is the main pillar of Pakistan economy</h2>
-        <h2>quetta is also very beautiful city</h2>
-        <h1>Thats all from today</h1>
+        <h1>Students Information</h1>
+        <table>
+            <tr>
+            <th>Name</th>
+            <th>Father Name</th>
+            <th>Address</th>
+            <th>Contact</th>
+        </tr>
+        <tr>
+            <td>Akash Shabbir</td>
+            <td>Ghulam Shabbir</td>
+            <td>Islamabad</td>
+            <td>03235302377</td>
+        </tr>
+        </table>
 
     </body>
 </html>
