data added in table

--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
             <td>Islamabad</td>
             <td>03235302377</td>
         </tr>
+        <tr>
+            <td>Kashan Shabbir</td>
+            <td>Ghulam Shabbir</td>
+            <td>Islamabad</td>
+            <td>03235302377</td>
+        </tr>
+        <tr>
+            <td>Waqas Shabbir</td>
+            <td>Ghulam Shabbir</td>
+            <td>Islamabad</td>
+            <td>03235302377</td>
+        </tr>
+        <tr>
+            <td>Sajjad Ahmed</td>
+            <td>Mushtaq Ahmed</td>
+            <td>Islamabad</td>
+            <td>03060099887</td>
+        </tr>
         </table>
 
     </body>
