changes added in class

--- a/class.html
+++ b/class.html
@@ -17,11 +17,11 @@
             <h1>Islamabad</h1>
             <p>Islamabad is the Capital of Pakistan</p>
         </div>
-        <div>
+        <div class="city">
             <h1>London</h1>
             <p>London Is the Capital of England</p>
         </div>
-        <div>
+        <div class="city">
             <h1>Paris</h1>
             <p>Paris is the Capital Of France</p>
         </div>
